// Vitest Snapshot v1

exports[`findElement utils > findElements > should find elements 1`] = `
[
  {
    "element-6066-11e4-a52e-4f735466cecf": "foobar",
  },
  {
    "element-6066-11e4-a52e-4f735466cecf": "foobar",
  },
]
`;

exports[`findElement utils > findElements > should find elements with xpath 1`] = `
[
  {
    "element-6066-11e4-a52e-4f735466cecf": "foobar",
  },
  {
    "element-6066-11e4-a52e-4f735466cecf": "foobar",
  },
]
`;

exports[`getPrototype 1`] = `
{
  "acceptAlert": {
    "value": 56,
  },
  "addCookie": {
    "value": 49,
  },
  "back": {
    "value": 8,
  },
  "closeWindow": {
    "value": 13,
  },
  "createWindow": {
    "value": 15,
  },
  "deleteAllCookies": {
    "value": 50,
  },
  "deleteCookie": {
    "value": 52,
  },
  "deleteSession": {
    "value": 2,
  },
  "dismissAlert": {
    "value": 55,
  },
  "elementClear": {
    "value": 43,
  },
  "elementClick": {
    "value": 42,
  },
  "elementSendKeys": {
    "value": 44,
  },
  "executeAsyncScript": {
    "value": 47,
  },
  "executeScript": {
    "value": 46,
  },
  "findElement": {
    "value": 25,
  },
  "findElementFromElement": {
    "value": 29,
  },
  "findElementFromShadowRoot": {
    "value": 26,
  },
  "findElements": {
    "value": 27,
  },
  "findElementsFromElement": {
    "value": 30,
  },
  "findElementsFromShadowRoot": {
    "value": 28,
  },
  "forward": {
    "value": 9,
  },
  "fullscreenWindow": {
    "value": 24,
  },
  "getActiveElement": {
    "value": 32,
  },
  "getAlertText": {
    "value": 57,
  },
  "getAllCookies": {
    "value": 48,
  },
  "getElementAttribute": {
    "value": 35,
  },
  "getElementCSSValue": {
    "value": 37,
  },
  "getElementComputedLabel": {
    "value": 62,
  },
  "getElementComputedRole": {
    "value": 61,
  },
  "getElementProperty": {
    "value": 36,
  },
  "getElementRect": {
    "value": 40,
  },
  "getElementShadowRoot": {
    "value": 31,
  },
  "getElementTagName": {
    "value": 39,
  },
  "getElementText": {
    "value": 38,
  },
  "getNamedCookie": {
    "value": 51,
  },
  "getPageSource": {
    "value": 45,
  },
  "getTimeouts": {
    "value": 4,
  },
  "getTitle": {
    "value": 11,
  },
  "getUrl": {
    "value": 6,
  },
  "getWindowHandle": {
    "value": 12,
  },
  "getWindowHandles": {
    "value": 16,
  },
  "getWindowRect": {
    "value": 20,
  },
  "isElementDisplayed": {
    "value": 34,
  },
  "isElementEnabled": {
    "value": 41,
  },
  "isElementSelected": {
    "value": 33,
  },
  "maximizeWindow": {
    "value": 22,
  },
  "minimizeWindow": {
    "value": 23,
  },
  "navigateTo": {
    "value": 7,
  },
  "newSession": {
    "value": 1,
  },
  "performActions": {
    "value": 53,
  },
  "printPage": {
    "value": 17,
  },
  "refresh": {
    "value": 10,
  },
  "releaseActions": {
    "value": 54,
  },
  "sendAlertText": {
    "value": 58,
  },
  "setTimeouts": {
    "value": 5,
  },
  "setWindowRect": {
    "value": 21,
  },
  "status": {
    "value": 3,
  },
  "switchToFrame": {
    "value": 18,
  },
  "switchToParentFrame": {
    "value": 19,
  },
  "switchToWindow": {
    "value": 14,
  },
  "takeElementScreenshot": {
    "value": 60,
  },
  "takeScreenshot": {
    "value": 59,
  },
}
`;

exports[`patchDebug > foobar 1`] = `
[
  "[◀   '{\\"id\\":20,\\"result\\":{\\"result\\":{\\"type\\":\\"string\\",\\"value\\":\\"complete\\"}},\\"sessionId\\":\\"B5BB76CBB624830A41E4159E01ABED39\\"}'◀",
]
`;

exports[`transformExecuteResult > multiple results 1`] = `
[
  "foobar",
  {
    "element-6066-11e4-a52e-4f735466cecf": "foobar",
  },
  42,
]
`;

exports[`validate > should do a proper request 1`] = `
{
  "elementId": "123",
  "using": "css selector",
  "value": "#body",
}
`;

exports[`validate > should do a proper request with non required params 1`] = `
{
  "customParam": 123,
  "elementId": "123",
  "using": "css selector",
  "value": "#body",
}
`;
